--- a/style.css
+++ b/style.css
@@ -33,15 +33,17 @@ x
     font-size: x-large;
     text-align: center;
 }
+
 /* Question */
 .question{
-    font-size: larger;
+    font-size:110%;
     text-align: center;
 }
 /* introduction */
 .introduction{
-    font-size: large;
-    text-align: center;
+
+    font-size: 150%;
+    text-align: left;
 }
 
 .webname{
