--- a/style.css
+++ b/style.css
@@ -1,24 +1,27 @@
+/* Page */
+
+.page{
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0%;
+}
 /* header */
 
-.header{
+.homeheader{
   
     width: 100%;
+    height: 20%;
     background-color: rgb(0, 0, 0);
-    height: 30vh;
     display: flex;
     flex-direction: row;
-    justify-content: left;
-
+    justify-content: center;
+    align-items: center;
 }
-x
 /* Logo */
 
-.logo{
-    width: 60px;
-    height: 30px;
-    position: absolute;
-    padding-left: 0%;
-    
+.homelogo{
+    width: 33%;
 }
 
 /* heading */
@@ -48,6 +51,8 @@ x
 
 .webname{
     width: 33%;
+    display: flex;
+    justify-content: center;
     align-items: center;
     text-align: center;
 }
@@ -56,4 +61,41 @@ x
     width: 33%;
     align-items: flex-end;
     text-align: right;
+    justify-content: flex-end;
+    display: flex;
+}
+
+.link{
+    text-decoration: none;
+    color: antiquewhite;
+}
+.link:hover{
+    color: red;
+}
+.logo{
+    display: flex;
+    justify-content: center;
+}
+
+.header{
+    width: 100%;
+    height: 20%;
+    background-color: rgb(0, 0, 0);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;   
+}
+
+.images{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.image{
+    width: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
