--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
 /* Page */
 
 .page{
+
     width: 100%;
     position: absolute;
     top: 0;
     left: 0%;
+    /* background-image: url(./assets/2D\ Backdround\ image.png); */
 }
 /* header */
 
@@ -45,7 +47,7 @@
 
 /* introduction */
 .introduction{
-    font-size: 110%;
+    font-size: 137%;
     text-align:justify;
 }
 
@@ -63,6 +65,7 @@
     text-align: right;
     justify-content: flex-end;
     display: flex;
+    flex-direction: row;
 }
 
 .link{
@@ -79,7 +82,7 @@
 
 .header{
     width: 100%;
-    height: 20%;
+    height: 30%;
     background-color: rgb(0, 0, 0);
     display: flex;
     flex-direction: column;
@@ -99,5 +102,31 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    ;
+}
+
+.paras{
+    width: 50%;
+    font-size: x-large;
+    font-family: 'Times New Roman', Times, serif;
+    text-align:justify;
+}
+.tableData{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.app image{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+}
+.team{
+    width: 100%;
+    font-size: x-large;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    text-align: center;
+}
+.image{
+    width: 90%;
+    height: 50%;
 }
